tests/neg/i9168.scala
// scalac: -Xfatal-warnings

def g: Int = try 42 finally ; // error
